@@ -2,6 +2,7 @@
 
 Even more debug output while task is running
 Windows users now need only specify the directory of exiftool.exe
+Bugfix, script would fail is creation_timestamp was not found in exif data
 
 0.5
 
